# Chip-8

./: .gitignore  CMakeLists.txt  Emulator.cpp  main.cpp
Include/: CPU.h  Config.h  Emulator.h  main.h
